src/App.css
/* ... */
.pdstage-boxlink:hover{color: #21232c; text-decoration: none;}
.pdstage-title{font-weight:bold; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; position: relative; padding-right: 20px;}
.dropdownbox-toolgripdot {position: absolute; right: 0; top: 0; z-index: 1;}
.dropdownbox-toolgripdot .toolgrip-dot, .dropdownbox-toolgripdot .toolgrip-dot:focus {background-color: inherit; color: #21232c; padding: 0px 5px; border: none; height: 20px; width: 20px; cursor: pointer;}
.dropdownbox-toolgripdot .toolgrip-dot:hover, .dropdownbox-toolgripdot .toolgrip-dot:focus{background-color: inherit; color: #21232c;}
.dropdownbox-toolgripdot .toolgrip-dot:after{display: none;}

.pdstage-description{min-height: 16px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; margin-top: 4px;}
.pdstage-descitem{white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}

.pdstage-status-row{margin-top: 5px; margin-bottom: 5px; position: relative; display: flex; flex-flow: row; -webkit-box-align: stretch; align-items: stretch; align-items: center;}
.pdstage-avatar{margin-right: 8px;}
.pdstage-status-row .pdstage-value{margin-right: 4px;}
.pdstage-avatar i{font-size: 16px; color: #21232c;}
.pdstage-status-indicator{position: absolute; right: 12px; bottom: 12px; z-index: 1;}
.pdstage-indicator-icon{cursor: pointer; position: relative; line-height: 1;}
.pdstage-indicator-icon:after {opacity: 0; content: ''; position: absolute; left: -3px; top: -2px; right: -3px; bottom: -2px; border: 1px solid #bbb; border-radius: 50%;}
.pdstage-indicator-icon:hover:after{opacity: 1;}
.pdstage-indicator-icon i{font-size: 18px; color: rgba(250, 94, 81);}


.pdstage-add{visibility: hidden; padding:0; position: sticky; top: 64px; bottom: 0px; display: flex;}
.pdstage-col:hover .pdstage-add{visibility: visible;}
.pdstage-addplus{background-color: #f5f5f6; width: 100%; display: block; border-radius: 4px; padding: 6px 10px;}
.pdstage-addplus:hover{background-color:#ececed;}
.pdstage-addplus i{color: rgba(33,35,44,.72); font-size: 18px;}

/* Start CSS Deal By Stage Popup */
.dealbystage-popup{padding: 8px 0 16px 0; overflow: auto; height: 485px;}
.dealbystage-popuprow{display: flex; flex-wrap: wrap;}
.dealbystage-popuprow .pdstage-item {width: 33.333%;}
/* End CSS Deal By Stage Popup */

.pdlist-row{margin: 0 -12px;}
.pdlisttable-scroll{overflow-y: auto;}
.pdlist-table{width: 100%;}
.pdlist-table th, .pdlist-table td{min-width: 0 !important; padding: 6px 8px; border: 1px solid rgba(33,35,44,.12);}
.pdlist-table th{font-size: 14px;}
.pdlist-table td{font-size: 14px;}
.pdlist-table-selectall{width: 32px;}
.pdlist-table-title{}
.pdlist-table-value{text-align: right;}
.pdlist-table-org{}
.pdlist-table-contact{}
.pdlist-table-closedate{width: 120px;}
.pdlist-table-actdate{width: 120px;}
.pdlist-table-owner{}
.pdlist-table-cogs{width: 32px;}
.ellipsistxt{overflow: hidden; width: 100%;}
.ellipsistxt span{display: block; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}

.pdlisttable-select{display: flex;}
.pdlisttable-select input[type="checkbox"] {width: 16px; height: 16px;}
.pdlisttable-title{}
.pdlisttable-value{}
.pdlisttable-org{}
.pdlisttable-contact{}
.pdlisttable-closedate{}
.pdlisttable-actdate{}
.pdlisttable-owner{}
.pdlisttable-cogs{}


.pdlisttable-item{position: relative;}
.tbl-editicon{display: none; position: absolute; right: 0; top: -1px; z-index: 1;}
.pdlist-table td:hover .tbl-editicon{display: block;}
.tbl-editicon a{text-decoration: none; display: inline-block; width: 24px; height: 24px; background-color: #fff; border: 1px solid rgba(33, 35, 44, .54); border-radius: 5px; text-align: center; color: #21232c;}
.tbltitle-data{}
.pdlist-table td a{color: #21232c; text-decoration: none;}
.tblclosedate-data {height: 23px;}

/* Edit Stage CSS Start */
.editstage-area{overflow: hidden;}
/*.editstage-row{height: 100%; padding: 0 8px; overflow: scroll hidden; display: flex; flex-direction: row; width: 94vw;}*/
.editstage-row{height: 100%; padding: 0 8px; display: flex; flex-direction: column; width: 100%;}
.editstage-innerrow{display: flex; flex-direction: column;}
.editstage-row > div{padding-bottom: 8px;}
.editstage-col{height: 100%; /*min-width: 256px; width: 256px;*/ width: 100%; background-color:#f5f5f6; display: flex; flex-direction: column; border-radius: 8px; margin-top: 8px; flex-basis: 100%; box-shadow: 0 0 1px 1px rgb(0 0 0/5%),0 1px 2px -2px rgb(0 0 0/6%),0 1px 3px 0 rgb(0 0 0/7%); opacity: 0.32;}
.editstage-col:first-child{margin-top: 0; opacity: 1;}
.editstage-col:hover{opacity: 1;}
.editstage-col > div {height: 100%;}
.editstagebox{position: relative;height: 100%;}
.editstage-head{position: relative; background-color: #f5f5f6; border-radius: 8px;}
.editstage-headin{padding: 16px; display: flex;}
.editstage-headlead{display: flex; flex: 1 1 0%; flex-direction: column; overflow: hidden;}
.editstage-leadtitle{font-weight: 600; padding-bottom: 5px;}
.editstage-leadicons{display: flex;}
.editstage-leadicon, .editstage-bellicon{font-size: 12px;}
.editstage-bellicon{margin-left: 10px; position: relative; padding-left: 12px;}
.editstage-bellicon:after{content: ''; position: absolute; left: 0; top: 50%; width: 4px; height: 4px; background-color: #21232c; margin-top: -1px; border-radius: 4px;}


.editstage-dragicon{display: flex; -webkit-box-align: center; align-items: center;}
.editstage-plusicon {display: none; position: absolute; top: 10px; z-index: 1; width: 24px; height: 24px;border: 1px solid rgba(33, 35, 44, .24); border-radius: 20px; animation: 500ms ease 0s 1 normal none running ikgggy; background-color: #fff; text-align: center; cursor: pointer; box-shadow: 0 0 1px 1px rgb(0 0 0/5%), 0 1px 2px -2px rgb(0 0 0/6%), 0 1px 3px 0 rgb(0 0 0/7%);}
.plusiconleft{left: -14px;}
.plusiconright{right: -14px;}
.editstage-col:hover .editstage-plusicon {display: block;}
/* ... */

